--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -1,13 +1,16 @@
-version: '3'
+version: '3.8'
 
 services:
   postgres:
     image: postgres:latest
     restart: always
+    container_name: back-end
     environment:
       POSTGRES_USER: dampess
       POSTGRES_PASSWORD: dgRGQEGGR55<§
       POSTGRES_DB: appli-gestion-sport
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
