--- a/back-end/.prettierrc
+++ b/back-end/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  
+  "rules": {
+    "prettier/prettier": 0
+  }
 }
