--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -54,3 +54,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# DevOps
+mma-baisieux-9d3b39cfa296.json
