--- a/back-end/package.json
+++ b/back-end/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/typeorm": "^10.0.2",
@@ -35,6 +36,7 @@
     "class-validator": "^0.14.1",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.12",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
