--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,13 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
-      run: cd back-end 
+      run: |
+        cd back-end 
         npm install
 
     - name: Build
-      run: cd back-end 
+      run: |
+        cd back-end 
         npm run build
 
     - name: Deploy to Google App Engine
