test de mise en prod du back

--- a/back-end/app.yaml
+++ b/back-end/app.yaml
@@ -1,11 +1,10 @@
-runtime: nodejs14
+runtime: nodejs18 # Mise à jour de la version du runtime
 env: flex
 
 resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
-
 
 env_variables:
   NODE_ENV: 'production'
