--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "engines": {
+    "node": "20.1.x"
+  },
   "dependencies": {
     "@google-cloud/storage": "^7.9.0",
     "@nestjs-modules/mailer": "^1.11.2",
