--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "engines": {
-    "node": "20.1.x"
+    "node": "21.x.x"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.9.0",
