ci: fix deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,16 @@
 name: Deploy to Google App Engine
 
 on:
+  workflow_dispatch: ~
   push:
     branches:
       - main
 
 jobs:
+  job_id:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +30,7 @@ jobs:
       run: |
         cd back-end 
         npm run build
-
+        
     - name: Deploy to Google App Engine
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
