--- a/back-end/app.yaml
+++ b/back-end/app.yaml
@@ -1,10 +1,22 @@
-runtime: nodejs20 # Mise à jour de la version du runtime
-env: flex
+runtime: nodejs20
 
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+automatic_scaling:
+    max_instances: 1
+
+handlers:
+    - url: /.*
+      secure: always
+      redirect_http_response_code: 301
+      script: auto
+
+# commande pour demarrer son applicati
 
 env_variables:
   NODE_ENV: 'production'
+
+
+entrypoint: "npm run start:prod"
+
+
+
+  
