--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
     "node": "20.1.x"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.4.0",
     "@google-cloud/storage": "^7.9.0",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
