--- a/back-end/cron.yaml
+++ b/back-end/cron.yaml
@@ -1,6 +1,7 @@
 cron:
   - description: "Réveiller l'application juste avant minuit"
     url: /wake-up
-    schedule: '58 23 * * *'
-    timezone: 'Europe/Paris' 
+    schedule: 'every day 23:55'
+    timezone: 'Europe/Paris'
+
 
