--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -33,5 +33,5 @@ jobs:
       uses: google-github-actions/upload-cloud-storage@v0.8.0
       with:
         path: front-end/dist
-        destination: gs://${{ secrets.GCS_BUCKET_NAME }}
+        destination: gs://frontend-app-mma
         credentials: ${{ secrets.GCP_SA_KEY }}
