--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -9,29 +9,39 @@ on:
       - 'front-end/**'
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '20'
 
-    - name: Install dependencies
-      run: |
-        cd front-end
-        npm install
+    - name: Install NPM dependencies
+      run: npm install
 
-    - name: Build frontend
-      run: |
-        cd front-end
-        npm run generate
+    - name: Generate static project
+      run: npm run generate
 
-    - name: Deploy to Google Cloud Storage
-      uses: google-github-actions/upload-cloud-storage@v0.8.0
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
       with:
-        path: front-end/dist
-        destination: gs://frontend-app-mma
-        credentials: ${{ secrets.GCP_SA_KEY }}
+        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'app-mma-bsx@mma-baisieux.iam.gserviceaccount.com'
+
+    - name: Upload static files to Google Cloud Storage
+      id: 'upload-file'
+      uses: google-github-actions/upload-cloud-storage@v2
+      with:
+        path: 'dist'  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
+        destination: gs://${{ secrets.GCS_BUCKET_NAME }}  # Remplacez par le nom de votre bucket
+
+    - name: Log upload
+      run: echo "Uploaded files to ${{ steps.upload-file.outputs.uploaded }}"
