--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -41,7 +41,7 @@ jobs:
       id: 'upload-file'
       uses: google-github-actions/upload-cloud-storage@v2
       with:
-        path: 'dist'  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
+        path: ./front-end/dist  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
         destination: gs://${{ secrets.GCS_BUCKET_NAME }}  # Remplacez par le nom de votre bucket
 
     - name: Log upload
