--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -39,11 +39,6 @@ jobs:
           exit 1
         fi
 
-    - name: Copy dist content to temporary directory
-      run: |
-        mkdir -p ./temp-dist
-        cp -r ./front-end/dist/* ./temp-dist/
-
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
@@ -53,7 +48,7 @@ jobs:
       id: 'upload-file'
       uses: google-github-actions/upload-cloud-storage@v2
       with:
-        path: ./temp-dist/**  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
+        path: ./front-end/dist/*  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
         destination: ${{ secrets.GCS_BUCKET_NAME }}  # Remplacez par le nom de votre bucket
 
     - name: Log upload
