--- a/.github/workflows/deploy-frontend.yaml
+++ b/.github/workflows/deploy-frontend.yaml
@@ -48,12 +48,28 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
     - name: Upload static files to Google Cloud Storage
-      id: 'upload-file'
-      uses: google-github-actions/upload-cloud-storage@v2
-      with:
-        path: ./front-end/dist/  # Assurez-vous que le dossier correspond à la sortie de `npm run generate`
-        parent: false
-        destination: ${{ secrets.GCS_BUCKET_NAME }}  # Remplacez par le nom de votre bucket
+      id: upload-file
+      run: |
+        gsutil -m rsync -r ./front-end/dist gs://${{ secrets.GCS_BUCKET_NAME }}
+
+    - name: Configure bucket as website
+      run: |
+        gsutil web set -m index.html -e 404.html gs://${{ secrets.GCS_BUCKET_NAME }}
+
+    - name: Set content type for HTML files
+      run: |
+        gsutil setmeta -h "Content-Type:text/html" gs://${{ secrets.GCS_BUCKET_NAME }}/index.html
+        gsutil setmeta -h "Content-Type:text/html" gs://${{ secrets.GCS_BUCKET_NAME }}/404.html
+
+    - name: Make bucket content public
+      run: |
+        gsutil iam ch allUsers:objectViewer gs://${{ secrets.GCS_BUCKET_NAME }}
+
+    - name: Verify configuration
+      run: |
+        gsutil web get gs://${{ secrets.GCS_BUCKET_NAME }}
+        gsutil ls -L gs://${{ secrets.GCS_BUCKET_NAME }}/index.html
+        gsutil ls -L gs://${{ secrets.GCS_BUCKET_NAME }}/404.html
 
     - name: Log upload
       run: echo "Uploaded files to ${{ steps.upload-file.outputs.uploaded }}"
