--- a/back-end/package.json
+++ b/back-end/package.json
@@ -37,6 +37,7 @@
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "handlebars": "^4.7.8",
