--- a/back-end/package.json
+++ b/back-end/package.json
@@ -40,6 +40,7 @@
     "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "disposable-email-domains": "^1.0.62",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
@@ -54,6 +55,8 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/disposable-email-domains": "^1.0.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
