--- a/back-end/app.yaml
+++ b/back-end/app.yaml
@@ -1,19 +1,17 @@
 runtime: nodejs20
 
 automatic_scaling:
-  max_instances: 1
+    max_instances: 1
 
 handlers:
-  - url: /.*
-    secure: always
-    redirect_http_response_code: 301
-    script: auto
+    - url: /.*
+      secure: always
+      redirect_http_response_code: 301
+      script: auto
+
 
 env_variables:
   NODE_ENV: 'production'
 
-entrypoint: 'npm run start:prod'
 
-vpc_access_connector:
-  name: projects/mma-baisieux/locations/europe-west1/connectors/connector-appengine
-  egress_setting: all-traffic
+entrypoint: "npm run start:prod"
