--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,37 +1,72 @@
-name: Deploy to Google App Engine
+name: Deploy Application
 
 on:
-  workflow_dispatch: ~
   push:
     branches:
       - main
     paths:
+      - 'front-end/**'
       - 'back-end/**'
 
 jobs:
-  deploy:
+  deploy-frontend:
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'front-end') || contains(github.event.head_commit.message, 'all')
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    # Build front-end
+    - name: Install dependencies and build front-end
+      working-directory: front-end
+      run: |
+        npm install
+        npm run build
+
+    # Deploy front-end to the server
+    - name: Deploy front-end
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
+        scp -o StrictHostKeyChecking=no -i private_key -r front-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/dist/
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "pm2 reload frontend"
+
+  deploy-backend:
+    runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'back-end') || contains(github.event.head_commit.message, 'all')
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '20'
 
-    - name: Install dependencies
+    # Build back-end
+    - name: Install dependencies and build back-end
+      working-directory: back-end
       run: |
-        cd back-end 
         npm install
-
-    - name: Build
-      run: |
-        cd back-end 
         npm run build
-        
-    - name: Deploy to Google App Engine
-      uses: google-github-actions/deploy-appengine@v0.2.0
-      with:
-        credentials: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        deliverables: back-end/app.yaml
+
+    # Deploy back-end to the server
+    - name: Deploy back-end
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
+        scp -o StrictHostKeyChecking=no -i private_key -r back-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/back-end/dist/
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "pm2 reload backend"
