--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,10 +11,10 @@ on:
 jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'front-end') || contains(github.event.head_commit.message, 'all')
+    if: ${{ contains(github.event.head_commit.message, 'front-end') || contains(github.event.head_commit.message, 'all') }}
     steps:
     - name: Print event details
-      run: echo "Event details: ${{ toJson(github.event) }}"
+      run: echo "${{ toJson(github.event) }}"
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '20'
 
     - name: Install dependencies and build front-end
       working-directory: front-end
@@ -43,7 +43,32 @@ jobs:
 
   deploy-backend:
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'back-end') || contains(github.event.head_commit.message, 'all')
+    if: ${{ contains(github.event.head_commit.message, 'back-end') || contains(github.event.head_commit.message, 'all') }}
     steps:
     - name: Print event details
-      run: echo "Eve
+      run: echo "${{ toJson(github.event) }}"
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Install dependencies and build back-end
+      working-directory: back-end
+      run: |
+        npm install
+        npm run build
+
+    - name: Deploy back-end
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
+        scp -o StrictHostKeyChecking=no -i private_key -r back-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/back-end/dist/
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "pm2 reload backend"
