--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,10 +11,10 @@ on:
 jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message, 'front-end') || contains(github.event.head_commit.message, 'all') }}
+    if: ${{ github.event_name == 'push' && (github.event.commits.*.modified | join(' ') | contains('front-end/')) }}
     steps:
     - name: Print event details
-      run: echo "${{ toJson(github.event) }}"
+      run: echo "Event details: ${{ toJson(github.event) }}"
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -35,8 +35,6 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
-        ACTIONS_RUNNER_DEBUG: ${{ secrets.ACTIONS_RUNNER_DEBUG }}
-        ACTIONS_STEP_DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG }}
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
@@ -45,10 +43,10 @@ jobs:
 
   deploy-backend:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message, 'back-end') || contains(github.event.head_commit.message, 'all') }}
+    if: ${{ github.event_name == 'push' && (github.event.commits.*.modified | join(' ') | contains('back-end/')) }}
     steps:
     - name: Print event details
-      run: echo "${{ toJson(github.event) }}"
+      run: echo "Event details: ${{ toJson(github.event) }}"
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -69,8 +67,6 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
-        ACTIONS_RUNNER_DEBUG: ${{ secrets.ACTIONS_RUNNER_DEBUG }}
-        ACTIONS_STEP_DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG }}
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
