--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -1,14 +1,14 @@
-name: Deploy Back-End
+name: Deploy Front-End
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'back-end/**'
+      - 'front-end/**'
 
 jobs:
-  deploy-backend:
+  deploy-frontend:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -19,13 +19,13 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Install dependencies and build back-end
-      working-directory: back-end
+    - name: Install dependencies and build front-end
+      working-directory: front-end
       run: |
         npm install
         npm run build
 
-    - name: Deploy back-end
+    - name: Deploy front-end
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
@@ -33,10 +33,10 @@ jobs:
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
-        scp -o StrictHostKeyChecking=no -i private_key -r back-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist/
+        scp -o StrictHostKeyChecking=no -i private_key -r front-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
-          rm -rf /home/$SERVER_USER/appli-gestion-sport/back-end/dist/* && 
-          mv /home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist/* /home/$SERVER_USER/appli-gestion-sport/back-end/dist/ &&
-          rmdir /home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist &&
-          pm2 reload backend
+          rm -rf /home/$SERVER_USER/appli-gestion-sport/front-end/dist/* && 
+          mv /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/* /home/$SERVER_USER/appli-gestion-sport/front-end/dist/ &&
+          rmdir /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist &&
+          pm2 reload frontend
         "
