--- a/.github/workflows/deploy-front.yaml
+++ b/.github/workflows/deploy-front.yaml
@@ -33,7 +33,7 @@ jobs:
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
-        scp -o StrictHostKeyChecking=no -i private_key -r ../../front-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
+        scp -o StrictHostKeyChecking=no -i private_key -r front-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
           rm -rf /home/$SERVER_USER/appli-gestion-sport/front-end/dist/* && 
           mv /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/* /home/$SERVER_USER/appli-gestion-sport/front-end/dist/ &&
