--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -28,16 +28,18 @@ jobs:
     - name: List files in dist folder for debugging
       run: ls -la back-end/dist
 
-    - name: Deploy back-end using appleboy/ssh-action
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: |
-          mkdir -p /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/temp-dist/
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" back-end/dist/ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/temp-dist/
-          rm -rf /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/dist/*
-          mv /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/temp-dist/* /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/dist/
-          rmdir /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/temp-dist
+    - name: Deploy back-end
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
+        scp -o StrictHostKeyChecking=no -i private_key -r back-end/dist/* $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist/
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
+          rm -rf /home/$SERVER_USER/appli-gestion-sport/back-end/dist/* && 
+          mv /home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist/* /home/$SERVER_USER/appli-gestion-sport/back-end/dist/ &&
+          rmdir /home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist &&
           pm2 reload backend
+        "
