--- a/.github/workflows/deploy-front.yaml
+++ b/.github/workflows/deploy-front.yaml
@@ -25,6 +25,9 @@ jobs:
         npm install
         npm run build
 
+    - name: List files in dist folder for debugging
+      run: ls -la front-end/dist
+
     - name: Deploy front-end
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -33,6 +36,10 @@ jobs:
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
+        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
+          mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist &&
+          chmod 777 /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist
+        "
         rsync -avz -e "ssh -o StrictHostKeyChecking=no -i private_key" front-end/dist/ $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
           mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/dist &&
