--- a/.github/workflows/deploy-front.yaml
+++ b/.github/workflows/deploy-front.yaml
@@ -39,7 +39,7 @@ jobs:
       working-directory: front-end
       run: ls -la dist
 
-    - name: Deploy front-end
+    - name: Adjust permissions on server
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
@@ -48,9 +48,18 @@ jobs:
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
-          sudo mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist &&
-          sudo chown $SERVER_USER:$SERVER_USER /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist
+          sudo mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/dist &&
+          sudo chown -R $SERVER_USER:$SERVER_USER /home/$SERVER_USER/appli-gestion-sport/front-end/dist
         "
+
+    - name: Deploy front-end
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
         rsync -avz -e "ssh -o StrictHostKeyChecking=no -i private_key" front-end/dist/ $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
           mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/dist &&
