try to fix deploy problems

--- a/.github/workflows/deploy-front.yaml
+++ b/.github/workflows/deploy-front.yaml
@@ -43,26 +43,26 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
+        SERVER_USER: ubuntu
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
-        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
-          sudo mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/dist &&
-          sudo chown -R $SERVER_USER:$SERVER_USER /home/$SERVER_USER/appli-gestion-sport/front-end/dist
+        ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$SERVER_IP "
+          sudo find /home/ubuntu/appli-gestion-sport/front-end -type d -exec chmod 775 {} \; &&
+          sudo find /home/ubuntu/appli-gestion-sport/front-end -type f -exec chmod 664 {} \;
         "
 
     - name: Deploy front-end
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
+        SERVER_USER: ubuntu
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
-        rsync -avz -e "ssh -o StrictHostKeyChecking=no -i private_key" front-end/dist/ $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/
-        ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
-          mkdir -p /home/$SERVER_USER/appli-gestion-sport/front-end/dist &&
-          rsync -avz --delete /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist/ /home/$SERVER_USER/appli-gestion-sport/front-end/dist/ &&
-          rm -rf /home/$SERVER_USER/appli-gestion-sport/front-end/temp-dist
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no -i private_key" front-end/dist/ ubuntu@$SERVER_IP:/home/ubuntu/appli-gestion-sport/front-end/temp-dist/
+        ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$SERVER_IP "
+          mkdir -p /home/ubuntu/appli-gestion-sport/front-end/dist &&
+          rsync -avz --delete /home/ubuntu/appli-gestion-sport/front-end/temp-dist/ /home/ubuntu/appli-gestion-sport/front-end/dist/ &&
+          rm -rf /home/ubuntu/appli-gestion-sport/front-end/temp-dist
         "
