--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -33,9 +33,12 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SERVER_USER: ${{ secrets.SERVER_USER }}
+        GOOGLE_APPLICATION_CREDENTIALS: "/home/$SERVER_USER/appli-gestion-sport/back-end/credentials.json"
       run: |
         echo "$SSH_PRIVATE_KEY" > private_key
         chmod 600 private_key
+        echo "${{ secrets.GOOGLE_CREDENTIALS }}" > /home/$SERVER_USER/appli-gestion-sport/back-end/credentials.json
+        chmod 600 /home/$SERVER_USER/appli-gestion-sport/back-end/credentials.json
         rsync -avz -e "ssh -o StrictHostKeyChecking=no -i private_key" back-end/dist/ $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/appli-gestion-sport/back-end/temp-dist/
         ssh -o StrictHostKeyChecking=no -i private_key $SERVER_USER@$SERVER_IP "
           mkdir -p /home/$SERVER_USER/appli-gestion-sport/back-end/dist &&
