--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -48,5 +48,5 @@ jobs:
           chmod 644 /home/$SERVER_USER/appli-gestion-sport/back-end/mma-baisieux-f9fcae8661ce.json &&
           export GOOGLE_APPLICATION_CREDENTIALS=/home/$SERVER_USER/appli-gestion-sport/back-end/mma-baisieux-f9fcae8661ce.json &&
           pm2 delete api-start || true &&
-          pm2 start /home/$SERVER_USER/appli-gestion-sport/back-end/dist/main.js --name api-start -f --watch
+          pm2 start api-start
         "
