--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -30,6 +30,9 @@ jobs:
     - name: Archive Production Build
       run: tar -czf production.tar.gz -C back-end/dist .
 
+    - name: Verify Archive Content
+      run: tar -tzf production.tar.gz
+
     - name: Copy Files to the Server
       uses: appleboy/scp-action@master
       with:
@@ -49,7 +52,9 @@ jobs:
         port: 22
         script: |
           cd /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end
+          rm -rf dist  # Supprimer le contenu existant du répertoire dist
           tar -xzf production.tar.gz
+          ls -l dist  # Vérifier le contenu après extraction
           rm production.tar.gz
           chmod 644 mma-baisieux-f9fcae8661ce.json
           export GOOGLE_APPLICATION_CREDENTIALS=/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/mma-baisieux-f9fcae8661ce.json
