--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -1,4 +1,4 @@
-name: Deploy Back-End
+name: Deploy NestJS Application
 
 on:
   push:
@@ -52,18 +52,7 @@ jobs:
         port: 22
         script: |
           cd /home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end
-          rm -rf dist
-          mkdir dist
-          tar -xzf production.tar.gz -C dist
-          ls -l dist  # Vérifiez le contenu après extraction
-          if [ ! -f dist/main.js ]; then
-            echo "Error: dist/main.js not found"
-            exit 1
-          fi
+          tar -xzf production.tar.gz
           rm production.tar.gz
-          chmod 644 mma-baisieux-f9fcae8661ce.json
           export GOOGLE_APPLICATION_CREDENTIALS=/home/${{ secrets.SERVER_USER }}/appli-gestion-sport/back-end/mma-baisieux-f9fcae8661ce.json
-          pm2 delete api-start || true
-          pm2 start dist/main.js --name api-start -f --watch
-          pm2 save
-
+          pm2 reload ecosystem.config.js --update-env
