--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@nuxt/image": "^1.4.0",
     "@pinia/nuxt": "^0.5.1",
+    "@types/vue": "^2.0.0",
     "cropperjs": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
     "nuxt": "^3.11.1",
     "pinia": "^2.1.7",
+    "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
