modification deploy back yaml

--- a/.github/workflows/deploy-back.yaml
+++ b/.github/workflows/deploy-back.yaml
@@ -28,7 +28,7 @@ jobs:
       run: npm run build
 
     - name: Archive Production Build
-      run: tar -czf production.tar.gz -C back-end dist
+      run: tar -czf production.tar.gz -C back-end dist templates
 
     - name: Verify Archive Content
       run: tar -tzf production.tar.gz
